--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.0",
     "next": "13.5.5",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^4.11.0"
+    "react-hook-form": "^7.47.0",
+    "react-icons": "^4.11.0",
+    "zustand": "^4.4.4"
   },
   "devDependencies": {
     "@types/node": "^20",
